# fdk-python

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.txt  build-images.sh  circle.yml  func.yaml  generate_func.sh  github.whitelist  ocibuild.conf  realease.sh  release.sh  release_doc.md  release_images.sh  requirements.txt  setup.cfg  setup.py  stage_1_release_spec.yaml  stage_2_release_spec.yaml  test-images.sh  test-requirements.txt  test.sh  test_spec.yaml  tox.ini
.circle/: config.yml
.circleci/: config.yml
.circleci/.anchore/: policy_bundle.json
.github/: issue_template.md
fdk/: __init__.py  constants.py  context.py  customer_code.py  errors.py  event_handler.py  fixtures.py  headers.py  http_stream.py  log.py  parser.py  response.py  runner.py  statuses.py  version.py
fdk/application/: decorators.py  errors.py
fdk/async_http/: app.py  error_handler.py  exceptions.py  protocol.py  request.py  response.py  router.py  server.py  signpost.md
fdk/http/: errors.py  event_handler.py  handle.py  parser.py  request.py  response.py  routine.py  streams.py  worker.py
fdk/json/: handle.py  request.py  response.py
fdk/scripts/: fdk.py  fdk_tcp_debug.py  main.py
fdk/tests/: data.py  funcs.py  mixin.py  tcp_debug.py  test_application.py  test_cloudevent.py  test_delayed_loader.py  test_dispatcher.py  test_headers.py  test_http_request_parser.py  test_http_stream.py  test_json.py  test_json_request_parser.py  test_protocol.py  test_request_parser.py  test_statuses.py  test_tracing.py
images/: README.md
images/init/: Dockerfile-init-python3.6  Dockerfile-init-python3.7
internal/: Makefile  README.md  cache_python_images.sh  teamcity_build_python_env.sh  teamcity_build_script.sh
internal/build-scripts/: build_base_image.sh  build_base_images.sh  build_dist_pkg.sh  build_test_image.sh  build_test_images.sh  cleanup.sh  execute_unit_tests.sh  init-buildx.sh  orchestrator.sh  update-buildx.sh
internal/docker-files/: Dockerfile_TC  Dockerfile_dist_pkg
internal/release/: docker_publish.sh  github_publish.sh  release.sh  release_dist_pkg.sh  release_dist_pkg_helper.sh  release_dist_pkg_testpypi.sh  release_image.sh  release_images.sh  sanity_testing.sh  setup_release_version.sh  (+1 more)
(+103 files in other folders)
