[metadata]
name = fdk
summary = Function Developer Kit for Python
description-file =
    README.md
author = Denis Makogon
author-email = denys.makogon@oracle.com
home-page = https://fnproject.github.io
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    fdk

[global]
setup-hooks =
    pbr.hooks.setup_hook
