[metadata]
name = fdk
summary = Function Developer Kit for Python
description =
    README.md
description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Denis Makogon
author-email = denys.makogon@oracle.com
home-page = https://fnproject.github.io
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[files]
packages =
    fdk

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    fdk = fdk.scripts.fdk:main
    fdk-tcp-debug = fdk.scripts.fdk_tcp_debug:main
